<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="356dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/black"
        android:background="#DAD8D8"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:scrollbars="horizontal"
        android:text="@string/textViewDefault"
        android:textAlignment="textStart"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="368dp"
        android:layout_height="257dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:backgroundTint="@color/dark_yellow"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/two"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/three"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="104dp"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/plus"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/four"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/five"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/six"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/minus"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/seven"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/eight"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/nine"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/multiply"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/decimal"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/zero"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/equals"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="62dp"
                android:insetLeft="6dp"
                android:insetRight="6dp"
                android:text="@string/divide"
                android:textSize="24sp"
                android:backgroundTint="@color/dark_yellow"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginTop="300dp"
        android:insetLeft="6dp"
        android:insetTop="6dp"
        android:insetRight="6dp"
        android:text="@string/clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInput"
        app:layout_constraintVertical_bias="0.397" />

</androidx.constraintlayout.widget.ConstraintLayout>